Initializer project